[metadata]
author = cspeterson
author_email = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = check_soa_serials is an Icinga2/Nagios plugin which compares the SOA serial numbers for the same DNS zone(s) from two different servers to ensure they are in sync

long_description = file: README.md
long_description_content_type = text/markdown
name = check_soa_serials
project_urls =
    Documentation = https://github.com/theias/check_soa_serials
    Bug Tracker = https://github.com/theias/check_soa_serials/issues
    Source = https://github.com/theias/check_soa_serials
    url = https://github.com/theias/check_soa_serials
version = attr: check_soa_serials.__version__

[options]
install_requires =
	dnspython>=2.6.1,<3.0.0
	nagiosplugin>=1.3.3,<2.0.0
packages = find:
package_dir =
	=./
python_requires = >=3.9
scripts =
	bin/check_soa_serials

[options.packages.find]
where = ./
exclude = tests*
